Styled the control panel for light and dark mode Fixed 'title' on video loader accessibility issue

--- a/apps/fretonator-web/src/app/common/fretonator/fretboard-config/fretboard-config.component.scss
+++ b/apps/fretonator-web/src/app/common/fretonator/fretboard-config/fretboard-config.component.scss
@@ -3,34 +3,30 @@
 @import "../../../../styles/mixins";
 @import "../../../../styles/typography";
 
-.fretboard__toggle {
-  display: block;
-  text-align: center;
+.configure__controls {
+  display: flex;
+  flex-direction: column;
+}
+
+.button__group {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: pxToRem($grid-unit * 2);
+
+  &:last-of-type {
+    margin-bottom: 0;
+  }
+
+  @media screen and (min-width: $screen-med) {
+    justify-content: flex-end;
+  }
 }
 
 .fretboard__toggleButton {
   @include chip_button_base();
-  height: pxToRem(44);
-}
-
-.toggle__shortLabel {
-  display: inline;
-  font-weight: inherit;
-  padding-left: pxToRem($grid_unit * 1.5);
-  padding-right: pxToRem($grid_unit * 1.5);
-
-  @media screen and (min-width: $screen-med) {
-    display: none;
-  }
-}
-
-.toggle__longLabel {
-  display: none;
-  font-weight: inherit;
-
-  @media screen and (min-width: $screen-med) {
-    display: inline;
-  }
+  padding: pxToRem($grid-unit * 1.5);
+  border-color: var(--fretboard-toggle-button-border-color);
 }
 
 .fretboard__toggleButton--active {
@@ -38,25 +34,13 @@
   color: var(--chip-foreground-color-active);
 }
 
-.fretboard__toggleButton--left {
+.fretboard__toggleButton:first-of-type {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
   border-right-width: calc(var(--border-width-button) / 2);
 }
 
-.fretboard__toggleButton--middle-left {
-  border-radius: 0;
-  border-right-width: calc(var(--border-width-button) / 2);
-  border-left-width: 0;
-}
-
-.fretboard__toggleButton--middle-right {
-  border-radius: 0;
-  border-right-width: 0;
-  border-left-width: calc(var(--border-width-button) / 2);
-}
-
-.fretboard__toggleButton--right {
+.fretboard__toggleButton:last-of-type {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   border-left-width: calc(var(--border-width-button) / 2);
