--- a/apps/fretonator-web/src/app/common/fretonator/scale-degrees/scale-degrees.component.scss
+++ b/apps/fretonator-web/src/app/common/fretonator/scale-degrees/scale-degrees.component.scss
@@ -6,8 +6,12 @@
 .degreesDisplay {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
+
+  @media screen and (min-width: $screen-med) {
+    justify-content: flex-start;
+  }
 }
 
 .degreesDisplay__degree {
